Fix spacing on top to follow the 32px pattern

--- a/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/featured-image/style.scss
+++ b/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/featured-image/style.scss
@@ -1,7 +1,7 @@
 .ai-assistant-featured-image {
 	&__content {
 		display: flex;
-		margin-top: 16px;
+		margin-top: 32px;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
